# ziggurat

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-app.yml
tests/: test_parser.py  test_template.py  test_visitors.py
tests/fixtures/: base.txt  filtered_greeting.txt  macros.txt  nginx.conf  transformed_greeting.txt  uses_include.txt
ziggurat/: __init__.py  ast.py  parser.py  template.py  visitor.py
